; ModuleID = '/home/carl/AnghaBench/mpv/video/out/gpu/extr_d3d11_helpers.c_update_swapchain_format.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/gpu/extr_d3d11_helpers.c_update_swapchain_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_log = type { i32 }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32 }

@.str = private unnamed_addr constant [48 x i8] c"Failed to query swap chain's current state: %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [38 x i8] c"Couldn't update swapchain format: %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mp_log*, i32*, i32)* @update_swapchain_format to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update_swapchain_format(%struct.mp_log* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.mp_log*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_5__, align 4
  %9 = alloca i32, align 4
  store %struct.mp_log* %0, %struct.mp_log** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i32*, i32** %6, align 8
  %11 = call i32 @IDXGISwapChain_GetDesc(i32* %10, %struct.TYPE_5__* %8)
  store i32 %11, i32* %9, align 4
  %12 = load i32, i32* %9, align 4
  %13 = call i64 @FAILED(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %3
  %16 = load %struct.mp_log*, %struct.mp_log** %5, align 8
  %17 = load i32, i32* %9, align 4
  %18 = call i32 @mp_HRESULT_to_str(i32 %17)
  %19 = call i32 @mp_fatal(%struct.mp_log* %16, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i32 %18)
  store i32 0, i32* %4, align 4
  br label %39

20:                                               ; preds = %3
  %21 = load i32*, i32** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @IDXGISwapChain_ResizeBuffers(i32* %21, i32 0, i32 %24, i32 %27, i32 %28, i32 0)
  store i32 %29, i32* %9, align 4
  %30 = load i32, i32* %9, align 4
  %31 = call i64 @FAILED(i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %38

33:                                               ; preds = %20
  %34 = load %struct.mp_log*, %struct.mp_log** %5, align 8
  %35 = load i32, i32* %9, align 4
  %36 = call i32 @mp_HRESULT_to_str(i32 %35)
  %37 = call i32 @mp_fatal(%struct.mp_log* %34, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.1, i64 0, i64 0), i32 %36)
  store i32 0, i32* %4, align 4
  br label %39

38:                                               ; preds = %20
  store i32 1, i32* %4, align 4
  br label %39

39:                                               ; preds = %38, %33, %15
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local i32 @IDXGISwapChain_GetDesc(i32*, %struct.TYPE_5__*) #1

declare dso_local i64 @FAILED(i32) #1

declare dso_local i32 @mp_fatal(%struct.mp_log*, i8*, i32) #1

declare dso_local i32 @mp_HRESULT_to_str(i32) #1

declare dso_local i32 @IDXGISwapChain_ResizeBuffers(i32*, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
